--- a/2022/day_05/haskell/day05.cabal
+++ b/2022/day_05/haskell/day05.cabal
@@ -1,10 +1,10 @@
 cabal-version:      2.4
-name:               day02
+name:               day05
 version:            1.0.0
 
-executable day02
+executable day05
     main-is:          Main.hs
-    other-modules:    Game
+    other-modules:    Parser, SupplyStacks
     build-depends:    base ^>=4.16.4.0
     hs-source-dirs:   app
     default-language: Haskell2010
