--- a/2022/day_08/haskell/day08.cabal
+++ b/2022/day_08/haskell/day08.cabal
@@ -1,9 +1,10 @@
 cabal-version:      2.4
-name:               day06
+name:               day08
 version:            1.0.0
 
-executable day06
+executable day08
     main-is:          Main.hs
+    other-modules:    Trees
     build-depends:    base ^>=4.16.4.0
     hs-source-dirs:   app
     default-language: Haskell2010
